--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,27 +1,87 @@
-#container {
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+
+.message {
+  color: rgba(88, 87, 87, 0.822);
+  font-size: 14px;
+  color: royalblue;
   text-align: center;
+}
+.form {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  max-width: 300px;
+  background-color: #fff;
+  padding: 40px;
+  border-radius: 20px;
+  position: relative;
+  opacity: 0.9;
+  font-weight: 700;
+  color: #222;
+}
 
+.form label {
+  position: relative;
+}
+
+.form label .input {
+  width: 100%;
+  padding: 10px 10px 20px 10px;
+  outline: 0;
+  border: 1px solid rgba(105, 105, 105, 0.397);
+  border-radius: 10px;
+}
+
+.form label .input + span {
   position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
+  left: 10px;
+  top: 15px;
+  font-size: 0.9rem;
+  cursor: text;
+  transition: 0.3s ease;
 }
 
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
+.form label .input:placeholder-shown + span {
+  top: 15px;
+  font-size: 0.9rem;
 }
 
-#container p {
-  font-size: 16px;
-  line-height: 22px;
-
-  color: #8c8c8c;
-
-  margin: 0;
+.form label .input:focus + span,
+.form label .input:valid + span {
+  top: 30px;
+  font-size: 0.7rem;
+  font-weight: 600;
 }
 
-#container a {
-  text-decoration: none;
+.submit {
+  
+  border: none;
+  outline: none;
+  background-color: royalblue;
+  padding: 10px;
+  border-radius: 10px;
+  color: #fff;
+  font-size: 1rem;
+  transform: 0.3s ease;
+}
+
+.flex {
+  display: block;
+  flex-direction: column;
+  align-items: center;
+  margin-left: 4rem;
+  // display: flex;
+  width: 100%;
+  gap: 50px;
+}
+
+@keyframes pulse {
+  from {
+    transform: escale(0.9);
+    opacity: 1;
+  }
+  to {
+    transform: scale(1.8);
+    opacity: 0;
+  }
 }
