--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -25,8 +25,7 @@
           style="width: 110px"
           name="nome"
           id="nome"
-          value="nome"
-          [(ngModel)]="nome"
+          [(ngModel)]="pet.nome"
         >
         </ion-input>
         <!-- <span>Nome</span> -->
@@ -41,8 +40,9 @@
           style="width: 110px"
           name="idade"
           id="idade"
-          value="idade"
-          [(ngModel)]="idade"
+          [(ngModel)]="pet.idade"
+
+          
         >
         </ion-input>
         <!-- <span>Idade</span> -->
@@ -57,7 +57,7 @@
           shape="round"
           expand="full"
           class="submit"
-          id="botaocadastrar"
+          
           (click)="salvandoPet()"
           >{{LabelBotaoCadastrar}}</ion-button
         >
@@ -69,7 +69,7 @@
           shape="round"
           expand="full"
           class="submit"
-          id="botaoconsultar"
+          
           (click)="consultarPet()"
           >{{LabelBotaoConsultar}}</ion-button
         >
