--- a/src/app/pets-cadastrados/pets-cadastrados.page.scss
+++ b/src/app/pets-cadastrados/pets-cadastrados.page.scss
@@ -1,27 +1,62 @@
 .content{
+   
+    display: flex;
+    align-items: center;
+    gap: 1px;
+    flex-wrap: wrap;
+    padding: 2px
     
-    border-color: red;
-    border-width: 3px;
+    
+   
+  
+    ;
 
 }
 .card{
     
-    border-color: red;
-    border-width: 3px;
-    background-color: aqua;
+    align-items: center;
+    size: 100vh;
+    
+    
     
 }
 
 .cardheader{
     
-    border-color: red;
-    border-width: 3px;
+   
+    text-align: center;
+    font-size: medium;
     
 }
 
 .cardsubtitle{
     
-    border-color: red;
-    border-width: 3px;
+    
+    text-align: center;
+    font-size: large;
     
 }
+
+.divcard{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+   
+   
+   
+   
+    
+    
+}
+
+// .row{
+    
+//     border-style: solid;
+//     border-color: red;
+//     width: 100%;
+//     height: 10px;
+//     display: flex;
+//     align-items: center;
+//     flex-direction: row;
+
+// }
