--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,5 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
-
 .message {
   color: rgba(88, 87, 87, 0.822);
   font-size: 14px;
@@ -9,8 +7,8 @@
 .form {
   display: flex;
   flex-direction: column;
-  gap: 10px;
-  max-width: 300px;
+  gap: 5px;
+  max-width: 200px;
   background-color: #fff;
   padding: 40px;
   border-radius: 20px;
@@ -20,11 +18,42 @@
   color: #222;
 }
 
-.form label {
-  position: relative;
+.cadastre{
+  // margin: 2px ;
+  // border: red ;
+  // border-style: solid;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  font-size: large;
+  
 }
 
-.form label .input {
+.insira{
+  // margin: 5px ;
+  // border: red ;
+  // border-style: solid;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  
+}
+
+.label {
+  // margin-top: 5px ;
+  // border: red ;
+  // border-style: solid;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 15rem;
+}
+
+.input {
+  margin-top: 10px;
+  gap: 15rem;
   width: 100%;
   padding: 10px 10px 20px 10px;
   outline: 0;
@@ -32,7 +61,7 @@
   border-radius: 10px;
 }
 
-.form label .input + span {
+.input + span {
   position: absolute;
   left: 10px;
   top: 15px;
@@ -41,20 +70,37 @@
   transition: 0.3s ease;
 }
 
-.form label .input:placeholder-shown + span {
-  top: 15px;
-  font-size: 0.9rem;
+.input:placeholder-shown + span {
+ top: 15px;
+ font-size: 0.9rem;
 }
 
-.form label .input:focus + span,
-.form label .input:valid + span {
+.input:focus + span,
+.input:valid + span {
   top: 30px;
   font-size: 0.7rem;
   font-weight: 600;
 }
 
-.submit {
-  
+.botaoCadastrar {
+  margin-top: 10px;
+  gap: 4rem;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  border: none;
+  outline: none;
+  background-color: royalblue;
+  padding: 10px;
+  border-radius: 10px;
+  color: #fff;
+  font-size: 1rem;
+  transform: 0.3s ease;
+}
+
+.botaoConsultar {
+  margin-top: 10px;
+  gap: 4rem;
   border: none;
   outline: none;
   background-color: royalblue;
@@ -66,13 +112,18 @@
 }
 
 .flex {
-  display: block;
+  
+  height: 100%;
+  margin: 5px ;
+  // border: red ;
+  // border-style: solid;
+  display: flex;
   flex-direction: column;
-  align-items: center;
-  margin-left: 4rem;
+  align-items: flex-start;
+  margin-left: 5rem;
   // display: flex;
   width: 100%;
-  gap: 50px;
+  //gap: 50px;
 }
 
 @keyframes pulse {
