--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -7,74 +7,100 @@
     </ion-toolbar>
   </ion-header>
 
+
   <div id="container">
     <img src="http://wallpapercave.com/wp/wp12146395.jpg" />
+    <!-- <img src={{imagem}}/> -->
   </div>
+
 
   <p class="cadastre">Cadastre seu Pet</p>
   <p class="insira">Insira os dados do seu Pet</p>
-  <form class="form">
+  <ion-row>
+    <ion-col size="4"></ion-col>
+      <ion-col size="4">
 
-    <div class="flex">
-      <label position="floating">
-        <ion-input
-          required
-          placeholder="Nome"
-          type="text"
-          class="input"
-          style="width: 110px"
-          name="nome"
-          id="nome"
-          [(ngModel)]="pet.nome"
-        >
-        </ion-input>
-        <!-- <span>Nome</span> -->
-      </label>
 
-      <label>
-        <ion-input
-          required
-          placeholder="Idade"
-          type="number"
-          class="input"
-          style="width: 110px"
-          name="idade"
-          id="idade"
-          [(ngModel)]="pet.idade"
+        <form class="form">
+     
+          <div class="flex">
+            <label position="floating">
+              <ion-input
+                required
+                placeholder=""
+                type="text"
+                class="input"
+                style="width: 110px"
+                name="nome"
+                id="nome"
+                [(ngModel)]="pet.nome"
+              >
+              </ion-input>
+              <span>Nome</span>
+            </label>
+     
+            <label>
+              <ion-input
+                required
+                placeholder=""
+                type="number"
+                class="input"
+                style="width: 110px"
+                name="idade"
+                id="idade"
+                [(ngModel)]="pet.idade"
+     
+               
+              >
+              </ion-input>
+              <span>Idade</span>
+            </label>
+     
+            <ion-row>
+              <ion-col size="3rem">
+     
+                <ion-button
+                  Custom
+                  Button
+                  size="default"
+                  fill="outline"
+                  shape="round"
+                  expand="full"
+                  class="botaoCadastrar"
+                  (click)="salvandoPet()"
+                  >{{LabelBotaoCadastrar}}</ion-button
+                >
+                <ion-button
+                  Custom
+                  Button
+                  size="default"
+                  fill="outline"
+                  shape="round"
+                  expand="full"
+                  class="botaoConsultar"
+                  (click)="consultarPet()"
+                  >{{LabelBotaoConsultar}}</ion-button
+                >
+              </ion-col>
+            </ion-row>
+          </div>
+        </form>
 
-          
-        >
-        </ion-input>
-        <!-- <span>Idade</span> -->
-      </label>
 
-      <ion-row>
-        <ion-col size="3rem">
+      </ion-col>
+      <ion-col>
 
-          <ion-button
-            Custom
-            Button
-            size="default"
-            fill="outline"
-            shape="round"
-            expand="full"
-            class="botaoCadastrar"
-            (click)="salvandoPet()"
-            >{{LabelBotaoCadastrar}}</ion-button
-          >
-          <ion-button
-            Custom
-            Button
-            size="default"
-            fill="outline"
-            shape="round"
-            expand="full"
-            class="botaoConsultar"
-            (click)="consultarPet()"
-            >{{LabelBotaoConsultar}}</ion-button
-          >
-        </ion-col>
-      </ion-row>
-    </div>
-  </form>
+
+
+
+      </ion-col>
+ 
+     
+   
+
+
+  </ion-row>
 </ion-content>
+
+
+
